--- a/app/src/main/res/layout/tab_1.xml
+++ b/app/src/main/res/layout/tab_1.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent">
 
    <!-- NOT SO IMPORTANT CUSTOM UI STUFF -->
-     <TextView
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -20,9 +21,12 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:src="@drawable/stenden"
-        android:layout_above="@+id/textView"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="126dp" />
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginBottom="30dp" />
 
 </RelativeLayout>
